
luadir = ${sysconfdir}/@PACKAGE@
lua_DATA = volmon+alert.lua db.lua monitor.lua forge-dns.lua \
	dump.lua hexdump.lua volmon.lua quiet.lua forge-reset.lua \
	stix+alert.lua stix+db.lua gaffer.lua zeromq.lua redis.lua json.lua

utildir = ${sysconfdir}/@PACKAGE@/util
util_DATA = util/addresses.lua util/elastic.lua util/stix.lua util/http.lua \
	util/json.lua util/dns.lua

EXTRA_DIST = volmon+alert.lua db.lua monitor.lua forge-dns.lua \
	dump.lua hexdump.lua volmon.lua quiet.lua forge-reset.lua \
	stix+alert.lua stix+db.lua gaffer.lua zeromq.lua redis.lua json.lua \
        util/addresses.lua util/elastic.lua util/stix.lua util/http.lua \
	util/json.lua util/dns.lua cyberprobe.cfg

sysconf_DATA = cyberprobe.cfg

