
luadir = ${sysconfdir}/@PACKAGE@
lua_DATA = monitor.lua forge-dns.lua hexdump.lua quiet.lua forge-reset.lua \
	zeromq.lua redis.lua json.lua amqp-topic.lua

utildir = ${sysconfdir}/@PACKAGE@/util
util_DATA = util/addresses.lua util/json.lua util/dns.lua

EXTRA_DIST = monitor.lua forge-dns.lua hexdump.lua quiet.lua forge-reset.lua \
	zeromq.lua redis.lua json.lua amqp-topic.lua \
        util/addresses.lua util/json.lua util/dns.lua cyberprobe.cfg

sysconf_DATA = cyberprobe.cfg

