
cybermonincdir = ${includedir}/cybermon

cybermoninc_HEADERS = cybermon/address.h cybermon/base_context.h	\
	cybermon/ber.h cybermon/context.h cybermon/cybermon-lua.h	\
	cybermon/dns_over_tcp.h cybermon/dns_over_udp.h			\
	cybermon/dns_protocol.h cybermon/engine.h cybermon/etsi_li.h	\
	cybermon/exception.h cybermon/flow.h cybermon/forgery.h		\
	cybermon/ftp.h cybermon/hexdump.h cybermon/http.h		\
	cybermon/icmp.h cybermon/ip.h cybermon/manager.h		\
	cybermon/monitor.h cybermon/nhis11.h cybermon/ntp.h		\
	cybermon/ntp_protocol.h cybermon/observer.h			\
	cybermon/packet_capture.h cybermon/packet.h cybermon/pdu.h	\
	cybermon/protocol.h cybermon/reaper.h cybermon/resource.h	\
	cybermon/smtp.h cybermon/socket.h cybermon/specification.h	\
	cybermon/tcp.h cybermon/transport.h		\
	cybermon/udp.h cybermon/unrecognised.h cybermon/xml.h		\
	cybermon/serial.h cybermon/udp_ports.h cybermon/tcp_ports.h     \
	cybermon/vxlan.h cybermon/eth_header.h
