
bin_SCRIPTS = cybermon-detector indicators-dump-fsm indicators-graph-fsm \
	indicators-show-fsm

EXTRA_DIST = cybermon-detector indicators-dump-fsm indicators-graph-fsm \
	indicators-show-fsm

dist_doc_DATA = indicators.json

cyberprobe_PYTHON = cyberprobe/fsm_extract.py cyberprobe/fsm.py \
	cyberprobe/indicators.py cyberprobe/logictree.py
cyberprobedir = $(pythondir)/cyberprobe

